[gd_scene load_steps=24 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://music/jump.mp3" type="AudioStream" id=3]
[ext_resource path="res://music/trickjump.mp3" type="AudioStream" id=4]
[ext_resource path="res://images/Star.png" type="Texture" id=5]
[ext_resource path="res://fonts/largecomic.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/scorecomic.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/new_theme.tres" type="Theme" id=8]
[ext_resource path="res://music/booya2.mp3" type="AudioStream" id=9]
[ext_resource path="res://images/WalkSS.png" type="Texture" id=10]
[ext_resource path="res://images/BoxyWalk.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.717391, 1 )
colors = PoolColorArray( 0.281621, 0.175046, 0.175046, 1, 0.79698, 0.766861, 0.766861, 1, 1, 1, 1, 1 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 7 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 3 )
frames = SubResource( 8 )
animation = "New Anim"
speed_scale = 0.0
playing = true
offset = Vector2( 0, -6 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="TrickParticles" type="CPUParticles2D" parent="Sprite"]
position = Vector2( 0, 36 )
emitting = false
amount = 60
lifetime = 0.25
randomness = 0.5
lifetime_randomness = 0.5
local_coords = false
texture = ExtResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 20, 1 )
direction = Vector2( 0, 1 )
spread = 90.0
gravity = Vector2( 0, 20 )
initial_velocity = 120.0
scale_amount = 0.5
scale_amount_random = 0.5
hue_variation = 1.0
hue_variation_random = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
limit_left = 0
limit_right = 960
limit_bottom = 32
limit_smoothed = true

[node name="FastFallParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.25
local_coords = false
emission_shape = 1
emission_sphere_radius = 30.0
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
scale_amount = 2.5
color = Color( 0.639216, 0.705882, 0.898039, 1 )

[node name="BoostParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 36 )
z_index = -1
emitting = false
amount = 60
lifetime = 0.3
one_shot = true
randomness = 0.5
lifetime_randomness = 0.5
local_coords = false
texture = ExtResource( 5 )
direction = Vector2( 0, 1 )
spread = 15.0
initial_velocity = 1200.0
scale_amount_random = 0.5
color = Color( 0.415686, 0.0588235, 0.0588235, 1 )
color_ramp = SubResource( 3 )
hue_variation_random = 1.0

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="TrickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="BoostSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = 10.114
pitch_scale = 0.9

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Score" type="Label" parent="HUD/Control"]
margin_left = 32.0
margin_top = 16.0
margin_right = 160.0
margin_bottom = 62.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0.388235, 0.211765, 0.886275, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Score: 0"

[node name="Combo" type="Label" parent="HUD/Control"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_top = 44.0
margin_right = 960.0
margin_bottom = 62.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Combo 1000!"
align = 1

[node name="ComboEnd" type="Label" parent="HUD/Control"]
modulate = Color( 1, 0.0117647, 0.0117647, 1 )
anchor_top = 0.5
anchor_right = 23.0
anchor_bottom = 0.5
margin_top = 1180.0
margin_right = 40.0
margin_bottom = 1275.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="Tween" type="Tween" parent="HUD/Control/ComboEnd"]

[node name="BoostAvailable" type="RichTextLabel" parent="HUD/Control"]
visible = false
anchor_top = 20.0
anchor_right = 24.0
anchor_bottom = 20.0
rect_min_size = Vector2( 200, 200 )
theme = ExtResource( 8 )
custom_colors/default_color = Color( 0.658824, 0.0470588, 0.0470588, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=60 freq=7]Boost Enabled[/wave][/center]"
text = "Boost Enabled"
scroll_active = false

[node name="Tween" type="Tween" parent="HUD/Control/BoostAvailable"]
